<resources>
    <string name="app_name">BTInformer</string>
    <string name="home">home</string>
    <string name="filters">filters</string>
    <string name="settings">settings</string>
    <string name="data_is">data is</string>
    <string name="name">name</string>
    <string name="data">data</string>
    <string name="mac">mac</string>
    <string name="uuid">uuid</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="scan">scan</string>
    <string name="manuf">manuf</string>
    <string name="continuous_scanning">continuous scanning</string>
    <string name="gps_logging">gps logging</string>
    <string name="sleep_time">sleep time</string>
    <string name="milliseconds">milliseconds</string>
    <string name="delete">delete</string>
    <string name="gps_log">gps log</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="view">view</string>
    <string name="matched_filter">matched filter</string>
    <string name="matched_device">matched device</string>
    <string name="create_filter">create filter</string>
    <string name="tutorial">tutorial</string>
    <string name="filter_creation">filter creation</string>
    <string name="filter_creation_tutorial">you can long tap any of the below to open the \'create filter\' dialog</string>
</resources>