<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_data"
        android:layout_below="@id/et_name"
        android:layout_alignEnd="@id/et_name"
        android:layout_alignStart="@id/et_name"
        android:layout_marginTop="8dp"
        android:hint="@string/data"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_lbl_data_descriptor"
        android:text="@string/data_is"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_data"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/sp_data_type"
        android:layout_below="@id/et_data"
        android:layout_marginTop="8dp"
        android:layout_alignEnd="@id/et_data"
        android:layout_toEndOf="@id/tv_lbl_data_descriptor"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_marginEnd="8dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/sp_data_type"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_alignBaseline="@id/btn_save"
        android:layout_toStartOf="@id/btn_save"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>