<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_gps"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:text="@string/gps_logging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_lbl_scan_time"
        android:layout_alignBaseline="@id/et_scan_time"
        android:layout_toStartOf="@id/et_scan_time"
        android:layout_marginEnd="8dp"
        android:text="@string/sleep_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_scan_time"
        android:layout_below="@id/sw_gps"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/milliseconds"
        android:layout_alignStart="@id/sw_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="number" />

</RelativeLayout>